# openacd

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.markdown  aclocal.m4  configure.ac  openacd.spec  rebar  rebar.config  rebar.config.script  rebar.config.template  rebar.config.travis
attic/: agent_auth_mnesia.erl  agent_web_listener.erl  call_queue_config_multi.erl  cpx_web_management.erl  log.hrl
include/: agent.hrl  call.hrl  cpx.hrl  gen_media.hrl  gen_server_test.hrl  gen_spec.hrl  odbc_kgb.hrl  queue.hrl  smtp.hrl  web.hrl
priv/www/admin/: main.js
rel/files/conf/: env.config.in  sys.config.in
rel/files/init.d/: openacd.in
specs/: openacd.spec.in
src/: OpenACD.app.src  agent.erl  agent_auth.erl  agent_auth_ets.erl  agent_auth_multi.erl  agent_channel.erl  agent_dialplan_connection.erl  agent_manager.erl  agent_prop.erl  call_queue.erl  call_queue_config.erl  call_queue_config_ets.erl  cdr.erl  cdr_dets.erl  cook.erl  cpx.erl  cpx_agent_connection.erl  cpx_agent_event.erl  cpx_agent_rpc.erl  cpx_conn_state.erl  cpx_ctl.erl  cpx_dummy_pid.erl  cpx_endpoint.erl  cpx_global.erl  cpx_hooks.erl  cpx_json_util.erl  cpx_media_dummy.erl  cpx_middle_supervisor.erl  cpx_monitor.erl  cpx_monitor_kgb_eventlog.erl  cpx_monitor_kgb_odbc.erl  cpx_monitor_odbc_supervisor.erl  cpx_monitor_passive.erl  cpx_queue_util.erl  cpx_runner.erl  cpx_supervisor.erl  cpx_web_management.erl  cpxlog.erl  dispatch_manager.erl  dispatcher.erl  (+11 more)
test/: cpx_test_util.erl
